# db-compare-rs

./: .gitignore  Cargo.toml  README.md  bonnie.toml
.github/workflows/: release.yml  test.yml
benches/: btree_or_vec.rs  counter-config.yml  counter.diff  counter.rs  diff_tool.rs
src/: all_columns.rs  all_rows.rs  cli.rs  counter.rs  diff_formatter.rs  extended_summary.rs  file_presenter.rs  last_created_records.rs  last_updated_records.rs  lib.rs  main.rs  presenter.rs  queries.rs  sequences.rs
src/database/: mod.rs  queries.rs  query.rs  repo.rs  request.rs
src/diff/: formatter.rs  io.rs  mod.rs  summary.rs
src/jobs/: all_columns.rs  all_columns_excluding_ids.rs  by_id.rs  by_id_excluding_replica_updated_ats.rs  counter.rs  last_created_records.rs  last_updated_records.rs  missing_recently_updated.rs  mod.rs  sequences.rs  updated_ats_until.rs  utils.rs
tests/: integration_tests.rs  run.rs
tests/common/: mod.rs
tests/fixtures/: config.yml  db_1_has_more_records_than_db_2_limit_1.diff  run-test-config.yml  testing_config.yml  whitelisted_table_example.json
tests/fixtures/examples/: users_UpdatedAts_example.diff  users_all_columns_example.diff  users_counters_example.diff  users_sequences_example.diff  users_updated_ats_example.diff
tests/fixtures/examples/outputs/: users.diff
tests/fixtures/examples/users_created_ats/: default.diff
tests/fixtures/examples/users_messages_all_columns/: all_columns.diff  all_columns_limit_5.diff  db_1_has_one_record_more_than_db_2.diff
tests/fixtures/examples/users_messages_all_columns_excluding_replica_updated_ats/: all_columns_excluding_replica_updated_ats.diff
tests/fixtures/examples/users_messages_by_id/: all_columns.diff  all_columns_limit_5.diff
tests/fixtures/examples/users_messages_by_id_excluding_replica_updated_ats/: all_columns_excluding_replica_updated_ats.diff
tests/fixtures/examples/users_messages_counters/: db_1_has_one_record_more_than_db_2.diff  test_counters.diff
tests/fixtures/examples/users_messages_created_ats/: created_ats.diff  db_1_has_one_record_more_than_db_2.diff
(+41 files in other folders)
