[package]
name = "db-compare"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
openssl = "0.10.45"
postgres = "0.19.4"
postgres-openssl = "0.5.0"
serde = "1.0.152"
serde_json = "1.0.91"
similar = "2.2.1"
yaml-rust = "0.4.5"
tokio = { version = "1.25.0", features = ["full"] }
tokio-postgres = "0.7.7"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "counter"
harness = false
