[package]
name = "db-compare"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
openssl = "0.10.45"
postgres = "0.19.4"
postgres-openssl = "0.5.0"
rayon = "1.6.1"
serde = "1.0.152"
serde_json = "1.0.91"
similar = "2.2.1"
yaml-rust = "0.4.5"

[dev-dependencies]
convert_case = "0.6.0"


[dev-dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

